--- a/src/style/helpers/_sprite.scss
+++ b/src/style/helpers/_sprite.scss
@@ -7,13 +7,13 @@ $we-width: 9px;
 $we-height: 9px;
 $we-total-width: 9px;
 $we-total-height: 9px;
-$we-image: '/school/public_html//images/sprite.png';
-$we: (0px, 0px, 0px, 0px, 9px, 9px, 9px, 9px, '/school/public_html//images/sprite.png', 'we', );
+$we-image: './images/sprite.png';
+$we: (0px, 0px, 0px, 0px, 9px, 9px, 9px, 9px, './images/sprite.png', 'we', );
 $spritesheet-width: 9px;
 $spritesheet-height: 9px;
-$spritesheet-image: '/school/public_html//images/sprite.png';
+$spritesheet-image: './images/sprite.png';
 $spritesheet-sprites: ($we, );
-$spritesheet: (9px, 9px, '/school/public_html//images/sprite.png', $spritesheet-sprites, );
+$spritesheet: (9px, 9px, './images/sprite.png', $spritesheet-sprites, );
 
 @mixin sprite-width($sprite) {
   width: nth($sprite, 5);
