--- a/src/template/pages/index.html
+++ b/src/template/pages/index.html
@@ -8,8 +8,8 @@
   <!-- endinject -->
 
   <!-- dev:css -->
+  <link rel="stylesheet" href="./css/libs.css">
   <link rel="stylesheet" href="./css/screen.css">
-  <link rel="stylesheet" href="./css/fonts/roboto/roboto.css">
   <!-- endinject -->
 </head>
 
@@ -32,6 +32,7 @@
   <!-- endinject -->
  
   <!-- dev:js -->
+  <script src="./js/libs.js"></script>
   <script src="./js/main.js"></script>
   <!-- endinject -->
 </body>
