--- a/src/template/layouts/master.html
+++ b/src/template/layouts/master.html
@@ -5,6 +5,7 @@
    <meta charset="utf-8">
   <title>{{ title }}</title>
   <!-- libs:css -->
+  <link rel="stylesheet" href="./libs/fancybox/css/jquery.fancybox.css">
   <!-- endinject -->
   <!-- dev:css -->
   <link rel="stylesheet" href="./css/screen.css">
@@ -16,7 +17,7 @@
   <header>
 	{% include '../layouts/header.html' %}
   </header>
-  <main> 
+  <main>
 	{% block content %}{% endblock %}
   </main>
   <footer>
@@ -25,9 +26,13 @@
   <script src="./libs/jquery/js/jquery.min.js"></script>
   <!--libs:js-->
 
+  <script src="./libs/fancybox/js/jquery.fancybox.pack.js"></script>
+
   <!--endinject-->
   <!--dev:js-->
-  <script src="./js/main.js"></script>
+
+  <script src="./js/all.js"></script>
+
   <!--endinject-->
 </body>
 
