--- a/src/template/pages/index.html
+++ b/src/template/pages/index.html
@@ -1,4 +1,8 @@
-{% extends './../layouts/master.html' %} 
+{% extends './../layouts/master.html' %}
 {% block content %}
-	index page
+	<div id="slider">
+		<div class="slide">
+			slide-1
+		</div>
+	</div>
 {% endblock %}
